# C-plus-plus_VK2023

./: .gitignore  CMakeLists.txt  README.md  text.txt  title.akas.tsv  title.basics.tsv  title.ratings.tsv
include/: IOperation.hpp  catOperation.hpp  echoOperation.hpp  hadleArguments.hpp  operations.hpp  parseOperations.hpp  pickRightMovies.hpp  pickTopMovies.hpp  pickTopTitles.hpp  printMovieNames.hpp  uniqOperation.hpp  utils.hpp
src/: catOperation.cpp  echoOperation.cpp  hadleArguments.cpp  main.cpp  operations.cpp  parseOperations.cpp  pickRightMovies.cpp  pickTopMovies.cpp  pickTopTitles.cpp  printMovieNames.cpp  uniqOperation.cpp  utils.cpp
